src/test/should_panic/array_map_one_duplicate.rs
pub fn main() {
    linear_collections_macros::array_map![("k", "v"), ("k", "v")]
}
